--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,6 +3,24 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  box-sizing: border-box;
+  max-width: 1184px;
 }
 
+/*@media screen and (min-width:1024px) and (max-width: 1279px) {
+  .header {
+    max-width: 928px;
+  }
+}*/
+
+@media screen and (min-width:768px) and (max-width: 1023px) {
+  .header {
+    padding: 28px 24px 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header {
+    padding: 16px 16px 0;
+
+  }
+}
