--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,11 +1,14 @@
 .lead__caption {
-  color: white;
-  font-size: 10px;
+  font-family: Inter;
   font-style: normal;
-  font-weight: 400;
+  font-weight: normal;
+  font-size: 10px;
   line-height: 14px;
+  /* identical to box height, or 140% */
   letter-spacing: 1.5px;
-  text-align: left;
+  text-transform: uppercase;
+  color: #fff;
   margin-block: 0;
   margin-top: 8px;
+  align-self: flex-start;
 }
