--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,4 +1,7 @@
 .lead {
-  width: 984px;
-  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 984px;
+  padding: 0 148px;
 }
