--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -13,7 +13,7 @@
   cursor: pointer;
 }
 
-@media screen and (min-width:320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
   .header__lang-link {
     font-size: 18px;
     line-height: 20px;
