--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,6 +1,6 @@
 .lead__subtitle {
   margin-block: 0;
-  margin: 0 auto 64px;
+  margin: 0 0 64px 0;
   color: white;
   width: 640px;
   text-align: center;
@@ -10,4 +10,20 @@
   font-weight: 400;
   line-height: 36px;
   letter-spacing: 0em;
+}
+
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .lead__subtitle {
+    margin: 0 0 56px 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .lead__subtitle {
+    margin: 0 0 40px 0;
+    font-size: 16px;
+    line-height: 20px;
+    max-width: 288px;
+    /* or 110% */
+  }
 }
