--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -2,6 +2,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 984px;
+  max-width: 1184px;
   padding: 0 148px;
+}
+
+@media screen and (min-width:1024px) and (max-width: 1279px) {
+  .lead {
+    padding: 0 48px;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .lead {
+    padding: 0;
+  }
 }
