--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,5 +1,4 @@
 .intro__title {
-  font-family: Inter;
   font-style: normal;
   font-weight: 900;
   font-size: 54px;
@@ -7,7 +6,22 @@
   /* identical to box height, or 107% */
   color: #fff;
   margin-block: 0;
-  margin-bottom: 40px;
 }
+
+@media screen and (min-width:768px) and (max-width: 1023px) {
+  .intro__title {
+    font-size: 32px;
+    line-height: 35px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .intro__title {
+    font-size: 32px;
+    line-height: 35px;
+  }
+}
+
+
 
 
