--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,3 +1,22 @@
 .intro {
-  width: 984px;
+  padding: 0 148px;
+  max-width: 1184px;
+}
+
+@media screen and (min-width:1024px) and (max-width: 1279px) {
+  .intro {
+    padding: 0 48px;
+  }
+}
+
+@media screen and (min-width:768px) and (max-width: 1023px) {
+  .intro {
+    padding: 0 24px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .intro {
+    padding: 0 16px;
+  }
 }
