--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,7 +1,27 @@
 .photo-grid {
   display: grid;
-  grid-template-rows: repeat(3, 213px);
-  grid-template-columns: repeat(4, 284px);
+  grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
   gap: 16px;
-  width: calc(284px*4 + 16px*3);
+  max-width: 1184px;
+  padding: 92px 48px 0;
+  /*justify-items: stretch;*/
+}
+
+@media screen and (min-width:1024px) and (max-width:1279px) {
+  .photo-grid {
+    gap: 14px;
+  }
+}
+
+@media screen and (min-width:768px) and (max-width:1023px) {
+  .photo-grid {
+   padding: 88px 24px 0;
+  }
+}
+
+@media screen and (max-width:767px) {
+  .photo-grid {
+   padding: 64px 16px 0;
+   gap:12px;
+  }
 }
