--- a/blocks/content/__cover/content__cover.css
+++ b/blocks/content/__cover/content__cover.css
@@ -1,3 +1,15 @@
 .content__cover {
-  margin: 92px auto 0;
+  margin: 92px auto 0 ;
+}
+
+@media screen and (min-width:768px) and (max-width:1023px) {
+  .content__cover {
+    margin: 90px auto 0;
+  }
+}
+
+@media screen and (max-width:767px) {
+  .content__cover {
+    margin: 66px auto 0 ;
+  }
 }
