--- a/blocks/content/__photo-grid/content__photo-grid.css
+++ b/blocks/content/__photo-grid/content__photo-grid.css
@@ -1,15 +1,17 @@
 .content__photo-grid {
-  margin: auto;
+  margin: 92px auto 0;
 }
 
-@media  screen and (min-width:768px) and (max-width:1023px) {
+@media screen and (min-width:768px) and (max-width:1023px) {
   .content__photo-grid {
     margin: 88px auto 0;
   }
 }
 
-@media  screen and (min-width:768px) and (max-width:1023px) {
+@media screen and (max-width:767px) {
   .content__photo-grid {
     margin: 64px auto 0;
   }
 }
+
+
