--- a/blocks/cover/__item/cover__item.css
+++ b/blocks/cover/__item/cover__item.css
@@ -10,10 +10,12 @@
   background-position: center;
   color: #fff;
   text-decoration: none;
-  /*padding: 90px;*/
   box-sizing: border-box;
   position: relative;
   z-index: 0;
+  cursor: url(../../../images/Pointer.png), pointer;
+  /*width: 100%;
+  height: 100%;*/
 }
 
 .cover__item::before {
@@ -32,3 +34,28 @@
 .cover__item:hover::before {
   opacity: .8;
 }
+
+@media screen and (min-width:1024px) and (max-width:1279px) {
+  .cover__item {
+    min-height: 640px;
+  }
+}
+
+@media screen and (min-width:768px) and (max-width:1023px) {
+  .cover__item {
+    min-height: 480px;
+  }
+}
+
+@media screen and (min-width:425px) and (max-width:767px) {
+  .cover__item {
+    min-height: 264px;
+  }
+}
+
+@media screen and (max-width:424px) {
+  .cover__item {
+    min-height: 200px;
+  }
+}
+
