--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,6 +1,19 @@
 .footer {
-  padding-bottom: 24px;
+  padding: 0 48px 24px;
   display: flex;
   justify-content: space-between;
   max-width: 1184px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+  .footer {
+    padding: 0 24px 24px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .footer {
+    flex-direction: column;
+    padding: 0 16px 24px;
+  }
 }
