--- a/blocks/header/__lang-links/header__leng-links.css
+++ b/blocks/header/__lang-links/header__leng-links.css
@@ -1,6 +1,13 @@
 .header__lang-links {
   margin-block: 0;
   padding-inline-start: 0;
-  transform: translateY(2px);/*Подгонка под логотип*/
+  transform: translateY(7px);/*Выравнивание под логотип*/
   list-style-type: none;
+}
+
+@media screen and (max-width: 767px) {
+
+  .header__lang-links{
+    transform: translateY(3px);/*Выравнивание под логотип*/
+  }
 }
