--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,11 +1,18 @@
-.lead__images {
+.lead__image {
   display: block;
   max-width: 100%;
   height: auto;
+  margin-top: 64px;
 }
 
-@media screen and (min-width:768px) and (max-width: 1023px) {
-  .lead {
-    padding: 0;
+@media screen and (min-width:768px) and (max-width: 1279px) {
+  .lead__image {
+    margin-top: 56px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .lead__image {
+    margin-top: 40px;
   }
 }
