--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,29 +1,21 @@
 .lead__subtitle {
-  margin-block: 0;
-  margin: 0 0 64px 0;
   color: white;
-  width: 640px;
   text-align: center;
-  font-family: Inter;
   font-size: 30px;
   font-style: normal;
   font-weight: 400;
   line-height: 36px;
-  letter-spacing: 0em;
-}
-
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
-  .lead__subtitle {
-    margin: 0 0 56px 0;
-  }
+  margin-block: 0;
+  margin-top: 32px;
+  max-width: 640px;
 }
 
 @media screen and (max-width: 767px) {
   .lead__subtitle {
-    margin: 0 0 40px 0;
+    margin-top:16px;
     font-size: 16px;
     line-height: 20px;
-    max-width: 288px;
     /* or 110% */
+    max-width: 288px;
   }
 }
