--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -5,20 +5,18 @@
   font-weight: 900;
   font-style: normal;
   margin-block: 0;
-  margin: 56px 0 32px 0;
   max-width: 720px;
   text-align: center;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
   .lead__title {
-    margin: 48px 0 32px 0;
+    /*margin: 48px 0 32px 0;*/
   }
 }
 
 @media screen and (max-width: 767px) {
   .lead__title {
-    margin: 48px 0 16px 0;
     font-size: 40px;
     line-height: 44px;
     max-width: 288px;
