--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -6,7 +6,8 @@
   /* identical to box height, or 122% */
   text-decoration-line: underline;
   color: #fff;
-  transition: opacity linear .4s;
+  transition: opacity linear .2s;
+  cursor: url(../../../images/Pointer.png), pointer;
 }
 
 .place__link:hover{
