--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,10 +1,8 @@
 .place__paragraph {
-  max-width: 484px;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
-  line-height: 163%;
-  /* or 29px */
+  line-height: 1.63;
   color: #fff;
   margin-block: 0;
   margin-bottom: 26px;
@@ -12,4 +10,18 @@
 
 .place__paragraph:last-of-type{
   margin: 0;
+}
+
+@media screen and (max-width:1023px) {
+  .place__paragraph {
+    font-size: 16px;
+    line-height: 1.625;
+    margin-bottom: 25px;
+  }
+}
+
+@media screen and (max-width:767px) {
+  .place__paragraph {
+    padding: 0 16px;
+  }
 }
