--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,7 +1,33 @@
 .place {
   display: grid;
-  grid-template-columns: 460px 484px;
+  grid-template-columns: 460px minmax(484px, auto);
   grid-template-rows: auto 460px;
   gap: 48px 40px;
-  width: 984px;
+  max-width: 984px;
+}
+
+@media screen and (min-width:1024px) and (max-width:1279px) {
+  .place {
+    grid-template-columns: 440px minmax(456px, auto);
+    grid-template-rows: auto 440px;
+    gap: 48px 32px;
+
+  }
+}
+
+@media screen and (min-width:768px) and (max-width:1023px) {
+  .place {
+    grid-template-columns: 340px minmax(352px, auto);
+    grid-template-rows: auto minmax(340px, auto);
+    gap: 48px 28px;
+
+  }
+}
+
+@media screen and (max-width:767px) {
+  .place {
+    grid-template-columns: minmax(320px, auto);
+    grid-template-rows: auto;
+    gap: 32px;
+  }
 }
