--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,11 +2,25 @@
   min-width: 320px;
   font-family: "inter", "arial", sans-serif ;
   background: #2a2c2f;
+  /*background: rgba(182, 182, 179, 0.897);*/
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
   -webkit-text-size-adjust: 100%;
   -ms-font-feature-settings: "kern" 1;
   font-feature-settings: "kern";
-
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  /*border: 2px solid red;*/
 }
+
+{
+  border: 2px solid red;
+}
+
+/*section {
+  width: 700px;
+}
+
