--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,3 +1,23 @@
 .cover {
-  max-width: 1184px;
+  /*max-width: 1184px;*/
+  padding: 92px 48px 0 ;
+}
+
+@media screen and (min-width:1024px) and (max-width:1279px) {
+  .cover {
+    padding: 90px 0 0;
+  }
+}
+
+
+@media screen and (min-width:768px) and (max-width:1023px) {
+  .cover {
+    padding: 90px 0 0;
+  }
+}
+
+@media screen and (max-width:767px) {
+  .cover {
+    padding: 66px 0 0 ;
+  }
 }
