--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,19 +1,20 @@
 .footer {
-  padding: 0 48px 24px;
+  padding: 92px 48px 24px;
   display: flex;
   justify-content: space-between;
-  max-width: 1184px;
+  width: 100vw;
+  box-sizing: border-box;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .footer {
-    padding: 0 24px 24px;
+    padding: 88px 24px 24px;
   }
 }
 
 @media screen and (max-width: 767px) {
   .footer {
     flex-direction: column;
-    padding: 0 16px 24px;
+    padding: 64px 16px 24px;
   }
 }
