--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,7 +3,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  max-width: 1184px;
+  /*max-width: 1184px;*/
+  /*width: 100vw;*/
+  box-sizing: border-box;
+  width: 100vw;
 }
 
 /*@media screen and (min-width:1024px) and (max-width: 1279px) {
