--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,22 +1,22 @@
 .intro {
-  padding: 0 148px;
+  padding: 92px 148px 0;
   max-width: 1184px;
 }
 
 @media screen and (min-width:1024px) and (max-width: 1279px) {
   .intro {
-    padding: 0 48px;
+    padding: 92px 48px 0;
   }
 }
 
 @media screen and (min-width:768px) and (max-width: 1023px) {
   .intro {
-    padding: 0 24px;
+    padding: 88px 24px 0;
   }
 }
 
 @media screen and (max-width: 767px) {
   .intro {
-    padding: 0 16px;
+    padding: 64px 16px 0;
   }
 }
