--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -2,17 +2,8 @@
   display: block;
   max-width: 100%;
   height: auto;
-  margin-top: 64px;
+  margin-bottom: 8px;
+  width: 100vw;
 }
 
-@media screen and (min-width:768px) and (max-width: 1279px) {
-  .lead__image {
-    margin-top: 56px;
-  }
-}
 
-@media screen and (max-width: 767px) {
-  .lead__image {
-    margin-top: 40px;
-  }
-}
