--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -6,16 +6,32 @@
   font-weight: 400;
   line-height: 36px;
   margin-block: 0;
-  margin-top: 32px;
   max-width: 640px;
+  white-space: pre-line;
+  margin-bottom: 64px;
 }
 
-@media screen and (max-width: 767px) {
+
+@media screen and (min-width:768px) and (max-width: 1279px) {
   .lead__subtitle {
-    margin-top:16px;
+    margin-bottom: 56px;
+  }
+}
+
+@media screen and (min-width:425px) and (max-width: 767px) {
+  .lead__subtitle {
+    font-size: calc(100vw*16/425);
+    line-height: 1.3;
+    margin-bottom: 40px;
+  }
+}
+
+@media screen and (max-width: 424px) {
+  .lead__subtitle {
     font-size: 16px;
     line-height: 20px;
     /* or 110% */
     max-width: 288px;
+    margin-bottom: 40px;
   }
 }
