--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -5,21 +5,32 @@
   font-weight: 900;
   font-style: normal;
   margin-block: 0;
-  max-width: 720px;
   text-align: center;
+  margin-bottom: 32px;
+  width: min-content;
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1279px) {
+
+/*@media screen and (min-width: 1281px) {
   .lead__title {
-    /*margin: 48px 0 32px 0;*/
+    font-size: calc(100vw*96/1281);
+    line-height: 1.04;
+    width: min-content;
+    /* or 110% *//*
+  }
+}*/
+@media screen and (min-width:768px) and (max-width:1023px) {
+  .lead__title {
+
   }
 }
 
 @media screen and (max-width: 767px) {
   .lead__title {
-    font-size: 40px;
-    line-height: 44px;
-    max-width: 288px;
+    font-size: calc(100vw*40/320);
+    line-height: 1.1;
+    width: min-content;
+    margin-bottom: 16px;
     /* or 110% */
   }
 }
