--- a/blocks/photo-grid/__list/photo-grid__list.css
+++ b/blocks/photo-grid/__list/photo-grid__list.css
@@ -1,23 +1,42 @@
 .photo-grid__list {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
+  grid-template-columns: repeat(4, minmax(280px, 1fr));
   gap: 16px;
-  max-width: 1184px;
   list-style-type: none;
   margin-block: 0;
   padding-inline-start: 0;
-  margin: auto;
+  padding: 92px 48px 0;
+  box-sizing: border-box;
+  max-width: 100vw;
 }
+
+@media screen and (max-width:1279px) {
+  .photo-grid__list {
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  }
+}
+
 
 @media screen and (min-width:1024px) and (max-width:1279px) {
   .photo-grid__list {
+    /*grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));*/
     gap: 14px;
+    padding: 92px 48px 0;
+
+  }
+}
+
+@media screen and (min-width:768px) and (max-width:1023px) {
+  .photo-grid__list {
+    /*grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));*/
+    padding: 88px 24px 0;
   }
 }
 
 @media screen and (max-width:767px) {
   .photo-grid__list {
-   /*padding: 0 16px;*/
-   gap:12px;
+    /*grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));*/
+    padding: 64px 16px 0;
+    gap:12px;
   }
 }
