--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,15 +1,3 @@
 .photo-grid {
-  padding: 0 48px;
-}
-
-@media screen and (min-width:768px) and (max-width:1023px) {
-  .photo-grid {
-   padding: 0 24px;
-  }
-}
-
-@media screen and (max-width:767px) {
-  .photo-grid {
-   padding: 0 16px;
-  }
+/*padding: 0 48px;*/
 }
