--- a/blocks/places/__list/places__list.css
+++ b/blocks/places/__list/places__list.css
@@ -2,4 +2,7 @@
   list-style-type: none;
   padding-inline-start: 0;
   margin-block: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
