--- a/blocks/places/__place/places__place.css
+++ b/blocks/places/__place/places__place.css
@@ -1,20 +1,21 @@
 .places__place {
-  margin: 80px auto 0;
+  margin-bottom: 80px;
+
 }
 
-.places__place:first-of-type {
-  margin-top: 0;
+.places__place:last-child {
+  margin: 0;
 }
 
 @media screen and (min-width: 768px) and (max-width:1023px) {
   .places__place {
-    margin: 73px auto 0;
+    margin-bottom: 73px;
   }
 }
 
 
 @media screen and (max-width: 767px) {
   .places__place {
-    margin: 50px auto 0;
+    margin-bottom: 50px;
   }
 }
