--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,8 +1,8 @@
 .intro__title {
   font-style: normal;
   font-weight: 900;
-  font-size: 54px;
-  line-height: 58px;
+  font-size: calc(100vw*54/1280);
+  line-height: 1.07;
   /* identical to box height, or 107% */
   color: #fff;
   margin-block: 0;
