--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -11,17 +11,12 @@
 }
 
 
-/*@media screen and (min-width: 1281px) {
+@media screen and (min-width: 1281px) {
   .lead__title {
     font-size: calc(100vw*96/1281);
     line-height: 1.04;
     width: min-content;
-    /* or 110% *//*
-  }
-}*/
-@media screen and (min-width:768px) and (max-width:1023px) {
-  .lead__title {
-
+    /* or 110% */
   }
 }
 
