--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,7 +2,7 @@
   padding: 92px 48px 24px;
   display: flex;
   justify-content: space-between;
-  width: 100vw;
+  width: 100%;
   box-sizing: border-box;
 }
 
