--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,9 +1,8 @@
 .lead__image {
   display: block;
-  max-width: 100%;
+  width: 100%;
   height: auto;
   margin-bottom: 8px;
-  width: 100vw;
 }
 
 
