--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   padding: 56px 148px 0;
+  box-sizing: border-box;
 }
 
 @media screen and (min-width:1024px) and (max-width: 1279px) {
