--- a/blocks/photo-grid/__list/photo-grid__list.css
+++ b/blocks/photo-grid/__list/photo-grid__list.css
@@ -7,7 +7,7 @@
   padding-inline-start: 0;
   padding: 92px 48px 0;
   box-sizing: border-box;
-  max-width: 100vw;
+  max-width: 100%;
 }
 
 @media screen and (max-width:1279px) {
