--- a/blocks/cover/__item/cover__item.css
+++ b/blocks/cover/__item/cover__item.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  min-height: 740px;
+  min-height: 46.25em;
   background-image: url(../../../images/cover.jpg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -35,19 +35,19 @@
 
 @media screen and (min-width:1024px) and (max-width:1279px) {
   .cover__item {
-    min-height: calc(100vw*640/1024)
+    min-height: 40em;
   }
 }
 
 @media screen and (min-width:768px) and (max-width:1023px) {
   .cover__item {
-    min-height: calc(100vw*480/768)
+    min-height: calc(100vw*30em/768);
   }
 }
 
 @media screen and (max-width: 767px) {
   .cover__item {
-    min-height: calc(100vw*200/320)
+    min-height: calc(100vw*12.5em/320);
   }
 }
 
