--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,21 +1,21 @@
 .cover__title {
   font-style: normal;
   font-weight: 900;
-  font-size: 72px;
-  line-height: 76px;
+  font-size: 4.5em;
+  line-height: 1.06;
   /* or 106% */
   text-align: center;
   color: #fff;
-  max-width: 560px;
+  max-width: 35em;
   margin-block: 0;
-  margin-bottom: 32px;
+  margin-bottom: 2em;
 }
 
 @media screen and (max-width:767px) {
   .cover__title {
-    font-size: 32px;
-    line-height: 35px;
+    font-size: 2em;
+    line-height: 1.09;
     margin-bottom: 16px;
-    max-width: 320px;
+    max-width: 20em;
   }
 }
