--- a/blocks/footer/__link-item/footer__link-item.css
+++ b/blocks/footer/__link-item/footer__link-item.css
@@ -1,13 +1,13 @@
 .footer__link-item {
   display: inline-block;
-  margin: 0 18px 0 0;
+  margin: 0 1.125em 0 0;
 }
 
 @media screen and (max-width: 767px) {
 
   .footer__link-item {
     display: block;
-    margin-top: 32px;
+    margin-top: 2em;
   }
 
   .footer__link-item:first-of-type {
