--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,20 +1,21 @@
 .footer {
-  padding: 92px 48px 24px;
+  padding: 5.75em 3em 1.5em;
   display: flex;
   justify-content: space-between;
   width: 100%;
   box-sizing: border-box;
+  max-width: 1920px;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .footer {
-    padding: 88px 24px 24px;
+    padding: 5.5em 1.5em 1.5em;
   }
 }
 
 @media screen and (max-width: 767px) {
   .footer {
     flex-direction: column;
-    padding: 64px 16px 24px;
+    padding: 4em 1em 1.5em;
   }
 }
