--- a/blocks/header/__lang-link-item/header__lang-ling-item.css
+++ b/blocks/header/__lang-link-item/header__lang-ling-item.css
@@ -1,6 +1,6 @@
 .header__lang-link-item {
   display: inline-block;
-  margin-right: 18px;
+  margin-right: 1.125em;
 }
 
 .header__lang-link-item:last-of-type {
