--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,6 +1,6 @@
 @media screen and (min-width:320px) and (max-width: 767px) {
   .header__logo {
-    width: 142px;
-    height: 42px;
+    width: 8.875em;
+    height: 2.625em;
   }
 }
