--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,23 +1,24 @@
 .header {
-  padding: 28px 48px 0;
+  padding: 1.75em 3em 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
   box-sizing: border-box;
   width: 100%;
+  max-width: 1920px;
 }
 
 
 
 @media screen and (min-width:768px) and (max-width: 1023px) {
   .header {
-    padding: 28px 24px 0;
+    padding: 1.75em 1.5em 0;
   }
 }
 
 @media screen and (max-width: 767px) {
   .header {
-    padding: 16px 16px 0;
+    padding: 1em 1em 0;
 
   }
 }
