--- a/blocks/intro/__list-item/intro__list-item.css
+++ b/blocks/intro/__list-item/intro__list-item.css
@@ -1,8 +1,8 @@
 .intro__list-item {
   font-style: normal;
   font-weight: bold;
-  font-size: 12px;
-  line-height: 18px;
+  font-size: .75em;
+  line-height: 1.5;
   /* or 150% */
   color: #fff;
 }
