--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,24 +1,17 @@
 .intro__title {
   font-style: normal;
   font-weight: 900;
-  font-size: calc(100vw*54/1280);
+  font-size: 3.375em;
   line-height: 1.07;
   /* identical to box height, or 107% */
   color: #fff;
   margin-block: 0;
 }
 
-@media screen and (min-width:768px) and (max-width: 1023px) {
-  .intro__title {
-    font-size: 54px;
-    line-height: 58px;
-  }
-}
-
 @media screen and (max-width: 767px) {
   .intro__title {
-    font-size: 32px;
-    line-height: 35px;
+    font-size: 2em;
+    line-height: 1.09;
   }
 }
 
