--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,21 +1,21 @@
 .intro {
-  padding: 92px 148px 0;
+  padding: 5.75em 9.25em 0;
 }
 
 @media screen and (min-width:1024px) and (max-width: 1279px) {
   .intro {
-    padding: 92px 48px 0;
+    padding: 5.75em 3em 0;
   }
 }
 
 @media screen and (min-width:768px) and (max-width: 1023px) {
   .intro {
-    padding: 88px 24px 0;
+    padding: 5.5em 1.5em 0;
   }
 }
 
 @media screen and (max-width: 767px) {
   .intro {
-    padding: 64px 16px 0;
+    padding: 4em 1em 0;
   }
 }
