--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -2,10 +2,10 @@
   font-family: Inter;
   font-style: normal;
   font-weight: normal;
-  font-size: 10px;
-  line-height: 14px;
+  font-size: .625em;
+  line-height: 1.4;
   /* identical to box height, or 140% */
-  letter-spacing: 1.5px;
+  letter-spacing: .15em;
   text-transform: uppercase;
   color: #fff;
   margin-block: 0;
@@ -14,12 +14,12 @@
 
 @media screen and (min-width:768px) and (max-width: 1023px) {
   .lead__caption {
-    padding-left: 24px;
+    padding-left: 2.4em;
   }
 }
 
 @media screen and (max-width:767px){
   .lead__caption {
-    padding-left: 16px;
+    padding-left: 1.54em;
   }
 }
