--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,37 +1,37 @@
 .lead__subtitle {
   color: white;
   text-align: center;
-  font-size: 30px;
+  font-size: 1.875em;
   font-style: normal;
   font-weight: 400;
-  line-height: 36px;
+  line-height: 1.2;
   margin-block: 0;
-  max-width: 640px;
+  max-width: 40em;
   white-space: pre-line;
-  margin-bottom: 64px;
+  margin-bottom: 2.133em;
 }
 
 
 @media screen and (min-width:768px) and (max-width: 1279px) {
   .lead__subtitle {
-    margin-bottom: 56px;
+    margin-bottom: 3.5em;
   }
 }
 
 @media screen and (min-width:425px) and (max-width: 767px) {
   .lead__subtitle {
-    font-size: calc(100vw*16/425);
+    font-size: calc(100vw*1em/425);
     line-height: 1.3;
-    margin-bottom: 40px;
+    margin-bottom: 2.5em;
   }
 }
 
 @media screen and (max-width: 424px) {
   .lead__subtitle {
-    font-size: 16px;
-    line-height: 20px;
+    font-size: 1em;
+    line-height: 1.1;
     /* or 110% */
-    max-width: 288px;
-    margin-bottom: 40px;
+    max-width: 18em;
+    margin-bottom: 2.5em;
   }
 }
