--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,31 +1,21 @@
 .lead__title {
   color: white;
-  font-size: 96px;
-  line-height: 100px;
+  font-size: 6em;
+  line-height: 1.04;
   font-weight: 900;
   font-style: normal;
   margin-block: 0;
   text-align: center;
-  margin-bottom: 32px;
+  margin-bottom: .3333em;
   width: min-content;
-}
-
-
-@media screen and (min-width: 1281px) {
-  .lead__title {
-    font-size: calc(100vw*96/1281);
-    line-height: 1.04;
-    width: min-content;
-    /* or 110% */
-  }
 }
 
 @media screen and (max-width: 767px) {
   .lead__title {
-    font-size: calc(100vw*40/320);
+    font-size: calc(100vw*2.5em/320);
     line-height: 1.1;
     width: min-content;
-    margin-bottom: 16px;
+    margin-bottom: 1em;
     /* or 110% */
   }
 }
