--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -2,18 +2,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 56px 148px 0;
+  padding: 3.5em 9.25em 0;
   box-sizing: border-box;
 }
 
 @media screen and (min-width:1024px) and (max-width: 1279px) {
   .lead {
-    padding: 48px 48px 0;
+    padding: 3em 3em 0;
   }
 }
 
 @media screen and (max-width: 1023px) {
   .lead {
-    padding: 48px 0 0;
+    padding: 3em 0 0;
   }
 }
