--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,6 +1,6 @@
 .page {
   min-width: 320px;
-  font-family: "inter", "arial", sans-serif ;
+  font-family: "inter", "arial", sans-serif;
   background: #2a2c2f;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -12,6 +12,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  font-size: 16px;
 }
 
 
