--- a/blocks/photo-grid/__list/photo-grid__list.css
+++ b/blocks/photo-grid/__list/photo-grid__list.css
@@ -1,18 +1,18 @@
 .photo-grid__list {
   display: grid;
-  grid-template-columns: repeat(4, minmax(280px, 1fr));
-  gap: 16px;
+  grid-template-columns: repeat(4, minmax(17.5em, 1fr));
+  gap: 1em;
   list-style-type: none;
   margin-block: 0;
   padding-inline-start: 0;
-  padding: 92px 48px 0;
+  padding: 5.75em 3em 0;
   box-sizing: border-box;
   max-width: 100%;
 }
 
 @media screen and (max-width:1279px) {
   .photo-grid__list {
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(17.5em, 1fr));
   }
 }
 
@@ -20,8 +20,8 @@
 @media screen and (min-width:1024px) and (max-width:1279px) {
   .photo-grid__list {
     /*grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));*/
-    gap: 14px;
-    padding: 92px 48px 0;
+    gap: .875em;
+    padding: 5.75em 3em 0;
 
   }
 }
@@ -29,14 +29,14 @@
 @media screen and (min-width:768px) and (max-width:1023px) {
   .photo-grid__list {
     /*grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));*/
-    padding: 88px 24px 0;
+    padding: 5.5em 1.5em 0;
   }
 }
 
 @media screen and (max-width:767px) {
   .photo-grid__list {
     /*grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));*/
-    padding: 64px 16px 0;
-    gap:12px;
+    padding: 4em 1em 0;
+    gap: .75em;
   }
 }
