--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,11 +1,11 @@
 .place__paragraph {
   font-style: normal;
   font-weight: normal;
-  font-size: 18px;
+  font-size: 1.125em;
   line-height: 1.63;
   color: #fff;
   margin-block: 0;
-  margin-bottom: 26px;
+  margin-bottom: 1.625em;
 }
 
 .place__paragraph:last-of-type{
@@ -14,14 +14,14 @@
 
 @media screen and (max-width:1023px) {
   .place__paragraph {
-    font-size: 16px;
+    font-size: 1em;
     line-height: 1.625;
-    margin-bottom: 25px;
+    margin-bottom: 1.5625em;
   }
 }
 
 @media screen and (max-width:767px) {
   .place__paragraph {
-    padding: 0 16px;
+    padding: 0 1em;
   }
 }
