--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,8 +1,8 @@
 .place__title {
   font-style: normal;
   font-weight: 900;
-  font-size: 72px;
-  line-height: 76px;
+  font-size: 4.5em;
+  line-height: 1.06;
   /* or 106% */
   color: #fff;
   margin-block: 0;
@@ -10,17 +10,17 @@
 
 @media screen and (min-width:768px) and (max-width:1023px) {
   .place__title {
-    font-size: 42px;
-    line-height: 46px;
+    font-size: 2.625em;
+    line-height: 1.1;
     /* or 110%  or 46px?*/
   }
 }
 
 @media screen and (max-width:767px) {
   .place__title {
-    font-size: 32px;
-    line-height: 35px;
-    padding: 0 16px;
+    font-size: 2em;
+    line-height: 1.09;
+    padding: 0 1em;
   }
 }
 
