--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,33 +1,33 @@
 .place {
   display: grid;
-  grid-template-columns: 460px minmax(484px, auto);
-  grid-template-rows: auto 460px;
-  gap: 48px 40px;
-  max-width: 984px;
+  grid-template-columns: 28.75em minmax(30.25em, auto);
+  grid-template-rows: auto 28.75em;
+  gap: 3em 2.5em;
+  max-width: 61.5em;
 }
 
 @media screen and (min-width:1024px) and (max-width:1279px) {
   .place {
-    grid-template-columns: 440px minmax(456px, auto);
-    grid-template-rows: auto 440px;
-    gap: 48px 32px;
+    grid-template-columns: 27.5em minmax(28.5em, auto);
+    grid-template-rows: auto 27.5em;
+    gap: 3em 2em;
 
   }
 }
 
 @media screen and (min-width:768px) and (max-width:1023px) {
   .place {
-    grid-template-columns: 340px minmax(352px, auto);
-    grid-template-rows: auto minmax(340px, auto);
-    gap: 48px 28px;
+    grid-template-columns: 21.25em minmax(22em, auto);
+    grid-template-rows: auto minmax(21.25em, auto);
+    gap: 3em 1.75em;
 
   }
 }
 
 @media screen and (max-width:767px) {
   .place {
-    grid-template-columns: minmax(320px, auto);
+    grid-template-columns: minmax(20em, auto);
     grid-template-rows: auto;
-    gap: 32px;
+    gap: 2em;
   }
 }
