--- a/blocks/places/__place/places__place.css
+++ b/blocks/places/__place/places__place.css
@@ -1,5 +1,5 @@
 .places__place {
-  margin-bottom: 80px;
+  margin-bottom: 5em;
 
 }
 
@@ -9,13 +9,13 @@
 
 @media screen and (min-width: 768px) and (max-width:1023px) {
   .places__place {
-    margin-bottom: 73px;
+    margin-bottom: 4.5625em;
   }
 }
 
 
 @media screen and (max-width: 767px) {
   .places__place {
-    margin-bottom: 50px;
+    margin-bottom: 3.125em;
   }
 }
