--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,22 +1,22 @@
 .places {
-  padding: 92px 0 0;
+  padding: 5.75em 0 0;
 }
 
 @media screen and (min-width: 1024px) and (max-width: 1279px) {
   .places {
-    padding: 92px 48px 0;
+    padding: 5.75em 3em 0;
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .places {
-    padding: 88px 24px 0;
+    padding: 5.5em 1.5em 0;
   }
 }
 
 @media screen and (max-width: 767px) {
   .places {
-    padding: 64px 0 0;
+    padding: 4em 0 0;
   }
 }
 
