--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -4,6 +4,7 @@
   justify-content: space-between;
   width: 100%;
   box-sizing: border-box;
+  max-width: 1920px;
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
