--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -10,12 +10,20 @@
   width: min-content;
 }
 
+@media screen and (min-width: 1920px) {
+  .lead__title {
+    font-size: 144px;
+    line-height: 150px;
+    width: min-content;
+    margin-bottom: 48px;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .lead__title {
     font-size: calc(100vw*40/320);
     line-height: 1.1;
     width: min-content;
     margin-bottom: 16px;
-    /* or 110% */
   }
 }
