--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -11,7 +11,35 @@
   margin-bottom: 32px;
 }
 
-@media screen and (max-width:767px) {
+@media screen and (min-width: 1920px) {
+  .cover__title {
+    font-size: 108px;
+    line-height: 114px;
+    margin-bottom: 48px;
+    max-width: 840px;
+  }
+}
+
+@media screen and (min-width:1650px) and (max-width: 1919px) {
+  .cover__title {
+    font-size: 90px;
+    line-height: 95.4px;
+    margin-bottom: 40px;
+    max-width: 700px;
+  }
+}
+
+
+@media screen and (min-width:448px) and (max-width: 767px) {
+  .cover__title {
+    font-size: 44px;
+    line-height: 47px;
+    margin-bottom: 24px;
+    max-width: 400px;
+  }
+}
+
+@media screen and (max-width:447px) {
   .cover__title {
     font-size: 32px;
     line-height: 35px;
