--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -2,6 +2,12 @@
   padding: 92px 48px 0 ;
 }
 
+@media screen and (max-width: 1920px) {
+  .cover {
+    padding: 138px 72px 0 ;
+  }
+}
+
 @media screen and (min-width:1024px) and (max-width:1279px) {
   .cover {
     padding: 90px 0 0;
