--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -8,6 +8,13 @@
   margin-block: 0;
 }
 
+@media screen and (min-width: 1920px) {
+  .footer__link-item {
+    font-size: 21px;
+    line-height: 24px;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .footer__copyright {
     margin-top: 48px;
