--- a/blocks/footer/__link-item/footer__link-item.css
+++ b/blocks/footer/__link-item/footer__link-item.css
@@ -3,6 +3,12 @@
   margin: 0 18px 0 0;
 }
 
+@media screen and (min-width: 1920px) {
+  .footer__link-item {
+    margin: 0 27px 0 0;
+  }
+}
+
 @media screen and (max-width: 767px) {
 
   .footer__link-item {
