--- a/blocks/header/__lang-links/header__leng-links.css
+++ b/blocks/header/__lang-links/header__leng-links.css
@@ -5,6 +5,12 @@
   list-style-type: none;
 }
 
+@media screen and (min-width:1920px) {
+  .header__lang-links{
+    transform: translateY(10.5px);/*Выравнивание под логотип*/
+  }
+}
+
 @media screen and (max-width: 767px) {
 
   .header__lang-links{
