--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,3 +1,9 @@
+@media screen and (min-width:1920px) {
+  .header__logo {
+    width: 264px;
+    height: 78px;
+  }
+}
 @media screen and (min-width:320px) and (max-width: 767px) {
   .header__logo {
     width: 142px;
