--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -8,6 +8,12 @@
   max-width: 1920px;
 }
 
+@media screen and (min-width: 1920px) {
+  .header {
+    padding: 42px 72px 0;
+  }
+}
+
 
 
 @media screen and (min-width:768px) and (max-width: 1023px) {
