--- a/blocks/intro/__list-item/intro__list-item.css
+++ b/blocks/intro/__list-item/intro__list-item.css
@@ -2,7 +2,13 @@
   font-style: normal;
   font-weight: bold;
   font-size: 12px;
-  line-height: 18px;
+  line-height: 1.5;
   /* or 150% */
   color: #fff;
+}
+
+@media screen and (min-width: 1920px) {
+  .intro__list-item {
+    font-size: 18px;
+  }
 }
