--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -4,3 +4,9 @@
   margin-block: 0;
   margin-top: 33px;
 }
+
+@media screen and (min-width: 1920px) {
+  .intro__list {
+    margin-top: 49.5px;
+  }
+}
