--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -9,3 +9,11 @@
   margin-top: 40px;
   max-width: 690px;
 }
+
+@media screen and (min-width: 1920px) {
+  .intro__text {
+    font-size: 24px;
+    margin-top: 60px;
+    max-width: 1035px;
+ }
+}
