--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -8,6 +8,12 @@
   margin-block: 0;
 }
 
+@media screen and (min-width: 1920px) {
+  .intro__title {
+    font-size: 81px;
+ }
+}
+
 @media screen and (min-width:768px) and (max-width: 1023px) {
   .intro__title {
     font-size: 54px;
