--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -11,6 +11,15 @@
   margin-bottom: 64px;
 }
 
+@media screen and (min-width:1920px) {
+  .lead__subtitle {
+    font-size: 45px;
+    line-height: 54px;
+    max-width: 960px;
+    margin-bottom: 96px;
+  }
+}
+
 
 @media screen and (min-width:768px) and (max-width: 1279px) {
   .lead__subtitle {
