--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -12,6 +12,13 @@
   margin: 0;
 }
 
+@media screen and (min-width:1920px) {
+  .place__paragraph {
+    font-size: 27px;
+    margin-bottom: 39px;
+  }
+}
+
 @media screen and (max-width:1023px) {
   .place__paragraph {
     font-size: 16px;
