--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -2,10 +2,17 @@
   font-style: normal;
   font-weight: normal;
   font-size: 12px;
-  line-height: 12px;
-  /* identical to box height, or 100% */
+  line-height: 1;
   letter-spacing: 2px;
   color: #aaa;
   margin-block: 0;
   margin-bottom: 12px;
 }
+
+@media screen and (min-width: 1920px) {
+  .place__url-heading {
+    font-size: 18px;
+    letter-spacing: 3px;
+    margin-bottom: 18px;
+  }
+ }
