--- a/blocks/places/__place/places__place.css
+++ b/blocks/places/__place/places__place.css
@@ -7,6 +7,12 @@
   margin: 0;
 }
 
+@media screen and (min-width: 1920px) {
+  .places__place {
+    margin-bottom: 120px;
+  }
+}
+
 @media screen and (min-width: 768px) and (max-width:1023px) {
   .places__place {
     margin-bottom: 73px;
