--- a/blocks/cover/__item/cover__item.css
+++ b/blocks/cover/__item/cover__item.css
@@ -24,7 +24,7 @@
   right: 0;
   bottom: 0;
   background: #2a2c2f;
-  opacity: 0.3;
+  opacity: .3;
   z-index: -1;
   transition: opacity linear .2s;
 }
@@ -33,25 +33,25 @@
   opacity: .8;
 }
 
-@media screen and (min-width:1920px) {
+@media screen and (min-width: 1920px) {
   .cover__item {
     min-height: 1110px;
   }
 }
 
-@media screen and (min-width:1650px) and (max-width: 1919px) {
+@media screen and (min-width: 1650px) and (max-width: 1919px) {
   .cover__item {
     min-height: 925px;
   }
 }
 
-@media screen and (min-width:1024px) and (max-width:1279px) {
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
   .cover__item {
     min-height: 640px;
   }
 }
 
-@media screen and (min-width:768px) and (max-width:1023px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .cover__item {
     min-height: 480px;
   }
@@ -62,4 +62,3 @@
     min-height: calc(100vw*200/320);
   }
 }
-
