--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -2,8 +2,7 @@
   font-style: normal;
   font-weight: 900;
   font-size: 72px;
-  line-height: 76px;
-  /* or 106% */
+  line-height: 76px; /*or 106% */
   text-align: center;
   color: #fff;
   max-width: 560px;
@@ -20,7 +19,7 @@
   }
 }
 
-@media screen and (min-width:1650px) and (max-width: 1919px) {
+@media screen and (min-width: 1650px) and (max-width: 1919px) {
   .cover__title {
     font-size: 90px;
     line-height: 95.4px;
@@ -30,16 +29,16 @@
 }
 
 
-@media screen and (min-width:448px) and (max-width: 767px) {
+@media screen and (min-width: 425px) and (max-width: 767px) {
   .cover__title {
     font-size: 44px;
-    line-height: 47px;
+    line-height: 46px;
     margin-bottom: 24px;
     max-width: 400px;
   }
 }
 
-@media screen and (max-width:447px) {
+@media screen and (max-width: 424px) {
   .cover__title {
     font-size: 32px;
     line-height: 35px;
