--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -2,26 +2,26 @@
   padding: 92px 48px 0;
 }
 
-@media screen and (max-width: 1920px) {
+@media screen and (min-width: 1920px) {
   .cover {
     padding: 138px 72px 0;
   }
 }
 
-@media screen and (min-width:1024px) and (max-width:1279px) {
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
+  .cover {
+    padding: 92px 0 0;
+  }
+}
+
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .cover {
     padding: 90px 0 0;
   }
 }
 
-
-@media screen and (min-width:768px) and (max-width:1023px) {
-  .cover {
-    padding: 90px 0 0;
-  }
-}
-
-@media screen and (max-width:767px) {
+@media screen and (max-width: 767px) {
   .cover {
     padding: 66px 0 0;
   }
