--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -3,9 +3,8 @@
   font-style: normal;
   font-weight: normal;
   font-size: 24px;
-  line-height: 28px;
-  /* identical to box height, or 117% */
-  text-decoration-line: underline;
+  line-height: 28px; /*identical to box height, or 117% */
+  text-decoration: none;
   mix-blend-mode: normal;
   cursor: url(../../../images/Pointer.png), pointer;
   transition: opacity linear .4s;
