--- a/blocks/intro/__span-accent/intro__span-accent.css
+++ b/blocks/intro/__span-accent/intro__span-accent.css
@@ -1,13 +1,14 @@
-.intro__list-item {
+.intro__span-accent {
   font-style: normal;
-  font-weight: normal;
+  font-weight: bold;
   font-size: 12px;
   line-height: 1.5;
   color: #fff;
 }
 
 @media screen and (min-width: 1920px) {
-  .intro__list-item {
+  .intro__span-accent {
     font-size: 18px;
   }
 }
+
