--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,5 +1,6 @@
 .lead__subtitle {
   color: white;
+  font-style: normal;
   text-align: center;
   font-size: 30px;
   font-style: normal;
@@ -7,11 +8,10 @@
   line-height: 36px;
   margin-block: 0;
   max-width: 640px;
-  white-space: pre-line;
   margin-bottom: 64px;
 }
 
-@media screen and (min-width:1920px) {
+@media screen and (min-width: 1920px) {
   .lead__subtitle {
     font-size: 45px;
     line-height: 54px;
@@ -21,25 +21,16 @@
 }
 
 
-@media screen and (min-width:768px) and (max-width: 1279px) {
+@media screen and (min-width: 768px) and (max-width: 1279px) {
   .lead__subtitle {
     margin-bottom: 56px;
   }
 }
 
-@media screen and (min-width:425px) and (max-width: 767px) {
-  .lead__subtitle {
-    font-size: calc(100vw*16/425);
-    line-height: 1.3;
-    margin-bottom: 40px;
-  }
-}
-
-@media screen and (max-width: 424px) {
+@media screen and (max-width: 767px) {
   .lead__subtitle {
     font-size: 16px;
-    line-height: 20px;
-    /* or 110% */
+    line-height: 20px; /* or 110% */
     max-width: 288px;
     margin-bottom: 40px;
   }
