--- a/blocks/photo-grid/__list/photo-grid__list.css
+++ b/blocks/photo-grid/__list/photo-grid__list.css
@@ -1,6 +1,6 @@
 .photo-grid__list {
   display: grid;
-  grid-template-columns: repeat(4, minmax(280px, 1fr));
+  grid-template-columns: repeat(4, 1fr);
   gap: 16px;
   list-style-type: none;
   margin-block: 0;
@@ -10,7 +10,7 @@
   max-width: 100%;
 }
 
-@media screen and (min-width:1920px) {
+ @media screen and (min-width: 1920px) {
   .photo-grid__list {
     grid-template-columns: repeat(4, minmax(420px, 1fr));
     gap: 24px;
@@ -18,30 +18,28 @@
   }
 }
 
-@media screen and (max-width:1279px) {
+@media screen and (max-width: 1279px) {
   .photo-grid__list {
     grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   }
 }
 
-
-@media screen and (min-width:1024px) and (max-width:1279px) {
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
   .photo-grid__list {
     /*grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));*/
     gap: 14px;
     padding: 92px 48px 0;
-
   }
 }
 
-@media screen and (min-width:768px) and (max-width:1023px) {
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .photo-grid__list {
-    /*grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));*/
     padding: 88px 24px 0;
   }
 }
 
-@media screen and (max-width:767px) {
+@media screen and (max-width: 767px) {
   .photo-grid__list {
     /*grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));*/
     padding: 64px 16px 0;
