--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -2,15 +2,14 @@
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
-  line-height: 22px;
-  /* identical to box height, or 122% */
+  line-height: 22px; /* identical to box height, or 122% */
   text-decoration-line: underline;
   color: #fff;
   transition: opacity linear .2s;
   cursor: url(../../../images/Pointer.png), pointer;
 }
 
-.place__link:hover{
+.place__link:hover {
   opacity: .8;
 }
 
