--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -2,8 +2,7 @@
   font-style: normal;
   font-weight: 900;
   font-size: 72px;
-  line-height: 76px;
-  /* or 106% */
+  line-height: 76px; /*or 106% */
   color: #fff;
   margin-block: 0;
 }
@@ -15,15 +14,15 @@
   }
 }
 
-@media screen and (min-width:768px) and (max-width:1023px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .place__title {
     font-size: 42px;
-    line-height: 46px;
-    /* or 110%  or 46px?*/
+    line-height: 46px; /*or 110%  or 46px?*/
+    max-width: 97%;
   }
 }
 
-@media screen and (max-width:767px) {
+@media screen and (max-width: 767px) {
   .place__title {
     font-size: 32px;
     line-height: 35px;
