--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -7,6 +7,7 @@
   color: #aaa;
   margin-block: 0;
   margin-bottom: 12px;
+  text-transform: uppercase;
 }
 
 @media screen and (min-width: 1920px) {
@@ -15,4 +16,4 @@
     letter-spacing: 3px;
     margin-bottom: 18px;
   }
- }
+}
