--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -6,37 +6,34 @@
   max-width: 984px;
 }
 
-@media screen and (min-width:1920px) {
+@media screen and (min-width: 1920px) {
   .place {
     grid-template-columns: 690px minmax(726px, auto);
     grid-template-rows: auto 690px;
     gap: 72px 60px;
     max-width: 1476px;
-
   }
 }
 
-@media screen and (min-width:1024px) and (max-width:1279px) {
+@media screen and (min-width: 1024px) and (max-width: 1279px) {
   .place {
     grid-template-columns: 440px minmax(456px, auto);
     grid-template-rows: auto 440px;
     gap: 48px 32px;
-
   }
 }
 
-@media screen and (min-width:768px) and (max-width:1023px) {
+@media screen and (min-width: 768px) and (max-width: 1023px) {
   .place {
     grid-template-columns: 340px minmax(352px, auto);
     grid-template-rows: auto minmax(340px, auto);
     gap: 48px 28px;
-
   }
 }
 
-@media screen and (max-width:767px) {
+@media screen and (max-width: 767px) {
   .place {
-    grid-template-columns: minmax(320px, auto);
+    grid-template-columns: auto;
     grid-template-rows: auto;
     gap: 32px;
   }
