--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -2,16 +2,10 @@
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
-  line-height: 16px; /*identical to box height, or 114% */
+  line-height: 16px;
+  /*identical to box height, or 114% */
   color: #fff;
   margin-block: 0;
-}
-
-@media screen and (min-width: 1920px) {
-  .footer__link-item {
-    font-size: 21px;
-    line-height: 24px;
-  }
 }
 
 @media screen and (max-width: 767px) {
