--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -2,17 +2,10 @@
   font-style: normal;
   font-weight: normal;
   font-size: 16px;
-  line-height: 1.63; /* or 26px */
+  line-height: 1.63;
+  /* or 26px */
   color: #fff;
   margin-block: 0;
   margin-top: 40px;
   max-width: 690px;
-}
-
-@media screen and (min-width: 1920px) {
-  .intro__text {
-    font-size: 24px;
-    margin-top: 60px;
-    max-width: 1035px;
-  }
 }
