--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -2,20 +2,11 @@
   font-style: normal;
   font-weight: normal;
   font-size: 10px;
-  line-height: 14px; /* identical to box height, or 140% */
+  line-height: 14px;
+  /* identical to box height, or 140% */
   letter-spacing: 1.5px;
   text-transform: uppercase;
   color: #fff;
-  margin-block: 0;
-  align-self: flex-start;
-}
-
-@media screen and (min-width: 1920px) {
-  .lead__caption {
-    font-size: 15px;
-    line-height: 21px;
-    letter-spacing: 2.25px;
-  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
