--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -10,16 +10,6 @@
   margin-bottom: 64px;
 }
 
-@media screen and (min-width: 1920px) {
-  .lead__subtitle {
-    font-size: 45px;
-    line-height: 54px;
-    max-width: 960px;
-    margin-bottom: 96px;
-  }
-}
-
-
 @media screen and (min-width: 768px) and (max-width: 1279px) {
   .lead__subtitle {
     margin-bottom: 56px;
@@ -29,7 +19,8 @@
 @media screen and (max-width: 767px) {
   .lead__subtitle {
     font-size: 16px;
-    line-height: 20px; /* or 110% */
+    line-height: 20px;
+    /* or 110% */
     max-width: 288px;
     margin-bottom: 40px;
   }
