--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -2,7 +2,8 @@
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
-  line-height: 1.63;
+  line-height: 29px;
+  /*163%*/
   color: #fff;
   margin-block: 0;
   margin-bottom: 26px;
@@ -12,17 +13,11 @@
   margin: 0;
 }
 
-@media screen and (min-width: 1920px) {
-  .place__paragraph {
-    font-size: 27px;
-    margin-bottom: 39px;
-  }
-}
-
 @media screen and (max-width: 1023px) {
   .place__paragraph {
     font-size: 16px;
-    line-height: 1.625;
+    line-height: 29px;
+    /*1.625*/
     margin-bottom: 25px;
   }
 }
