--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -2,22 +2,17 @@
   font-style: normal;
   font-weight: 900;
   font-size: 72px;
-  line-height: 76px; /*or 106% */
+  line-height: 76px;
+  /*or 106% */
   color: #fff;
   margin-block: 0;
-}
-
-@media screen and (min-width: 1920px) {
-  .place__title {
-    font-size: 108px;
-    line-height: 114px;
-  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1023px) {
   .place__title {
     font-size: 42px;
-    line-height: 46px; /*or 110%  or 46px?*/
+    line-height: 46px;
+    /*or 110%  or 46px?*/
     max-width: 97%;
   }
 }
@@ -29,4 +24,3 @@
     padding: 0 16px;
   }
 }
-
